force-app/main/default/objects/Task_Creation__c/Task_Creation__c.object-meta.xml
<CustomObject>
    <label>Task Creation</label>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>Task Creation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Creation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>