force-app/main/default/objects/Task_Creation__c/fields/Item_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Item_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Instructions</label>
    <type>TextArea</type>
</CustomField>