force-app/main/default/objects/Task_Creation__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>Name or Description of Task</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>