force-app/main/default/objects/Task_Creation__c/recordTypes/ROSA_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>ROSA_Opportunity</fullName>
    <active>true</active>
    <label>ROSA Opportunity</label>
</RecordType>